# DeepC-Fragmented

./: .gitignore  .gitmodules  LICENSE  README.md  linear.mat  main.py  main_car.py  main_journal.py  matlab_outcomes.json  pyproject.toml  run_varyingN.m  segment.json
data/: linearDopoTh.mat  pendulum.mat  pendulum_dataset.mat  pendulum_violin.mat  trajectories.mat  trajectories2.mat
malab/: CtrlSeg.m  CtrlUnseg.m  N_variation.m  double_pendulum.m  linear_segment.m  optimal_pendulum.m  run_boxplots.m  run_datasets.m  run_pendulum.m  run_trajectories.m
source/: deepce.py  deepcf.py  deepcfe.py  deepcfg.py  linear.py  nonlinear.py  pendulum.py
