[tool.poetry]
name = "deepc-fragmented"
version = "0.1.0"
description = "The package contend DeepC-Fragmented algorithm"
authors = ["Ruslan Shaiakhmetov <ruslan.shaiakhmetov@unibo.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
osqp = "^0.6.7.post1"
scipy = "^1.14.1"
termcolor = "^2.4.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
